responsive in services page

--- a/ExectileDysfunctionProcedure.html
+++ b/ExectileDysfunctionProcedure.html
@@ -83,11 +83,11 @@
   
   <!--  ENDING  MAIN SECTION -->
 
-<!--  Focused Extracorporeal Shock wave Therapy   -->
+<!--    EXECTILE DYSFUNCTION   -->
 <section>
     <div class="container mb-5">
         <div class="row"> 
-            <h3 class="pb-5">Focused Extracorporeal Shock wave Therapy  </h3>
+            <h3 class="pb-5">Exectile Dysfunction</h3>
             <div class="col-lg-6 col-sm-12 col-md-12">
                <img src="assets/img/Erectile_Dysfunction1.png" class="img-fluid" alt="">
             </div>
@@ -106,6 +106,81 @@
         </div>
     </div>
 </section>
+<!--  EXECTILE DYSFUNCTION  -->
+
+<!-- URINE INCONTINENCE-->
+<section>
+    <div class="container mb-5">
+        <div class="row"> 
+            <h3 class="pb-5">Urine Incontinence</h3>
+            <div class="col-lg-6 col-sm-12 col-md-12">
+             <span>
+                Focused Extracorporeal Shock Wave Therapy (ESWT): Revitalizing Wellness 
+                Targeted Extracorporeal Shock Wave Therapy, available at Aruna Hospital Couples Clinics, is a non-invasive medical procedure that uses shock waves to stimulate healing and improve blood circulation in specific areas of the body become bodies. .<br>
+                Procedure Overview: <br>
+                Assessment: Our experienced specialists will assess your specific condition to determine whether ESWT is the right treatment option for you. 
+                Concentrated treatment: During the treatment, targeted shock waves are delivered to the affected area, promoting tissue regeneration and relieving pain. <br>
+                Pleasant Experience: ESWT is generally painless and requires no anesthesia or downtime.<br> Benefits: ESWT has been proven effective in treating a variety of conditions, including musculoskeletal pain, erectile dysfunction, and more.<br> 
+                Recovery: Most patients can return to their daily activities immediately after the procedure. <br>
+                If you are looking for a non-invasive and effective solution to your condition, contact Aruna Hospital Couples Clinic to learn more about how targeted extracorporeal shockwave therapy can help you revive your well-being.
+             </span>
+            </div>
+            <div class="col-lg-6 col-sm-12 col-md-12">
+                <img src="assets/img/Erectile_Dysfunction2.png" class="img-fluid" alt="">
+             </div>
+        </div>
+    </div>
+</section>
+<!-- ENDING  URINE INCONTINENCE  -->
+
+<!-- PREMATURE EJACULATION -->
+<section>
+    <div class="container mb-5">
+        <div class="row"> 
+            <h3 class="pb-5">Premature Ejaculation</h3>
+            <div class="col-lg-6 col-sm-12 col-md-12">
+               <img src="assets/img/Erectile_Dysfunction3.png" class="img-fluid" alt="">
+            </div>
+            <div class="col-lg-6 col-sm-12 col-md-12">
+             <span>
+                Focused Extracorporeal Shock Wave Therapy (ESWT): Revitalizing Wellness 
+                Targeted Extracorporeal Shock Wave Therapy, available at Aruna Hospital Couples Clinics, is a non-invasive medical procedure that uses shock waves to stimulate healing and improve blood circulation in specific areas of the body become bodies. .<br>
+                Procedure Overview: <br>
+                Assessment: Our experienced specialists will assess your specific condition to determine whether ESWT is the right treatment option for you. 
+                Concentrated treatment: During the treatment, targeted shock waves are delivered to the affected area, promoting tissue regeneration and relieving pain. <br>
+                Pleasant Experience: ESWT is generally painless and requires no anesthesia or downtime.<br> Benefits: ESWT has been proven effective in treating a variety of conditions, including musculoskeletal pain, erectile dysfunction, and more.<br> 
+                Recovery: Most patients can return to their daily activities immediately after the procedure. <br>
+                If you are looking for a non-invasive and effective solution to your condition, contact Aruna Hospital Couples Clinic to learn more about how targeted extracorporeal shockwave therapy can help you revive your well-being.
+             </span>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- ENDING  PREMATURE EJACULATION  -->
+
+<!--  Focused Extracorporeal Shock wave Therapy   -->
+<section>
+    <div class="container mb-5">
+        <div class="row"> 
+            <h3 class="pb-5">Focused Extracorporeal Shock wave Therapy  </h3>
+            <div class="col-lg-6 col-sm-12 col-md-12">
+             <span>
+                Focused Extracorporeal Shock Wave Therapy (ESWT): Revitalizing Wellness 
+                Targeted Extracorporeal Shock Wave Therapy, available at Aruna Hospital Couples Clinics, is a non-invasive medical procedure that uses shock waves to stimulate healing and improve blood circulation in specific areas of the body become bodies. .<br>
+                Procedure Overview: <br>
+                Assessment: Our experienced specialists will assess your specific condition to determine whether ESWT is the right treatment option for you. 
+                Concentrated treatment: During the treatment, targeted shock waves are delivered to the affected area, promoting tissue regeneration and relieving pain. <br>
+                Pleasant Experience: ESWT is generally painless and requires no anesthesia or downtime.<br> Benefits: ESWT has been proven effective in treating a variety of conditions, including musculoskeletal pain, erectile dysfunction, and more.<br> 
+                Recovery: Most patients can return to their daily activities immediately after the procedure. <br>
+                If you are looking for a non-invasive and effective solution to your condition, contact Aruna Hospital Couples Clinic to learn more about how targeted extracorporeal shockwave therapy can help you revive your well-being.
+             </span>
+            </div>
+            <div class="col-lg-6 col-sm-12 col-md-12">
+                <img src="assets/img/Erectile_Dysfunction4.png" class="img-fluid" alt="">
+             </div>
+        </div>
+    </div>
+</section>
 <!--  ENDING   Focused Extracorporeal Shock wave Therapy  -->
 
 <!--  HIFEM Chair ( Emsella Chair )  -->
@@ -113,6 +188,9 @@
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-5">HIFEM Chair</h3>
+            <div class="col-lg-6 col-sm-12 col-md-12">
+                <img src="assets/img/Erectile_Dysfunction5.png" class="img-fluid" alt="">
+            </div>
             <div class="col-lg-6 col-sm-12 col-md-12">
                <span>
                     HIFEM Chair (Emsella Chair) at Aruna Hospital Couple Clinics: Elevating Pelvic Health
@@ -124,9 +202,7 @@
                     Transform your pelvic health and regain your confidence with the HIFEM Chair at Aruna Hospital Couple Clinics. Contact us to schedule a consultation and start your journey toward improved pelvic well-being.
                </span>
             </div>
-            <div class="col-lg-6 col-sm-12 col-md-12">
-                <img src="assets/img/Erectile_Dysfunction2.png" class="img-fluid" alt="">
-            </div>
+            
         </div>
     </div>
 </section>
@@ -137,9 +213,6 @@
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-5"> P-Shot  </h3>
-            <div class="col-lg-6 col-sm-12 col-md-12">
-                <img src="assets/img/Erectile_Dysfunction3.png" class="img-fluid" alt="">
-            </div>
             <div class="col-lg-6 col-sm-12 col-md-12">
                <span>
                     P-Shot (Priapus Shot): Enhancing Male Sexual Wellness
@@ -155,6 +228,9 @@
                     Results: Over time, patients often experience improved sexual function and satisfaction.<br>
                     The P-Shot is a non-invasive and discreet option to enhance male sexual wellness. Contact Aruna Hospital Couple Clinics to learn more about this procedure and how it can benefit you.
                </span>
+            </div>
+            <div class="col-lg-6 col-sm-12 col-md-12">
+                <img src="assets/img/Erectile_Dysfunction6.png" class="img-fluid" alt="">
             </div>
         </div>
     </div>
