--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
 </head>
 <body>
 
+
   <!-- Header -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-fixed-top">
     <div class="container-fluid d-flex justify-content-between align-items-center">
@@ -33,7 +34,7 @@
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse   navbar-collapse justify-content-center ml-auto" id="navbarNav">
             <ul class="navbar-nav">
             <div class="row"> 
               <!-- <div class="col-3 ps-5"> 
@@ -41,17 +42,24 @@
                       <a class="nav-link active" aria-current="page" href="#"><img src="assets/img/logo.png" alt=""></a>
                   </li>
               </div> -->
-               <div class="col-3 ps-5"> 
-                 <li class="nav-item ps-5">
-                    <a class="nav-link active" aria-current="page" href="#"><img src="assets/img/logo.png" alt=""></a>
+               <div class="col-lg-3 col-sm-12 col-md-12 ps-5 me-5"> 
+                 <li class="nav-item ps-5 me-5">
+                    <a class="nav-link active" aria-current="page" href="index.html"><img src="assets/img/logo.png" alt=""></a>
                  </li>
                </div>
-              <div class="col-3 ps-5"> 
-                  <li class="nav-item mt-3  ps-2 navbarphonenumber">
-                      <a class="nav-link" href="#"><img src="assets/img/phone.svg" alt="">+79979901881</a>
+              <div class="col-lg-3 col-sm-12 col-md-12 ms-5"> 
+                  <li class="nav-item mt-3  navbarphonenumber">
+                    <div class="row"> 
+                        <div class="col-3 ps-2"> 
+                          <a class="nav-link" href="index.html"><img src="assets/img/phone.svg" alt=""> </a>
+                        </div>
+                        <div class="col-9 mt-2">
+                          <h5>+79979901881</h5>
+                        </div>
+                    </div>
                   </li>
               </div>
-              <div class="col-3 ps-5  mt-2 navbarappoinment"> 
+              <div class="col-lg-3 col-sm-12 col-md-12 ms-5  mt-2 navbarappoinment"> 
                   <li class="nav-item ps-5">
                       <a class="nav-link" href="appoinment.html"><button type="button" class="btn btn-primary">APPOINTMENT</button></a>
                   </li>
@@ -61,8 +69,8 @@
         </div>
     </div>
   </nav>
-  
-  <!-- Ending  Header -->
+
+<!-- Ending  Header -->
 
 <!--  ABOUT US  -->
 
@@ -86,15 +94,16 @@
 
 <section class="ourstory mb-5">
     <div class="container"> 
-        <div class="card" style="width: 60rem;">
-            <div class="card-body  container col-lg-12">
-                  <h1  class="p-5 text-center">Our Story</h1>
-                  <p>As a leading cosmetic gynecology hospital in kakinada, we offer a range of   state-of-the-art treatments to make you look and feel Your best. Our team of experienced gynecologists and plastic surgeons is committed to providing you with personalized care and exceptional results. </p>
-                  <p>Our commitment to excellence and patient satisfaction has earned us a reputation as the benchmark in intimate Wellness and  aesthetic treatments.</p>
-                  <p>Don't compromise on Your well-being. Trust the best Aesthetic Gynecology 
-                  Hospital in Kakinada - Aruna Hospital Couples Clinic. Arrange a consultation with our experts today and take the first step towards more self-confidence.
-                  </p>
-            </div>
+              <div class="col-lg-12 col-sm-12 col-md-12"> 
+                <div class=" container ourstory p-5 justify-content-center"> 
+                    <h1  class="text-center">Our Story</h1>
+                    <p>As a leading cosmetic gynecology hospital in kakinada, we offer a range of   state-of-the-art treatments to make you look and feel Your best. Our team of experienced gynecologists and plastic surgeons is committed to providing you with personalized care and exceptional results. </p>
+                    <p>Our commitment to excellence and patient satisfaction has earned us a reputation as the benchmark in intimate Wellness and  aesthetic treatments.</p>
+                    <p>Don't compromise on Your well-being. Trust the best Aesthetic Gynecology 
+                    Hospital in Kakinada - Aruna Hospital Couples Clinic. Arrange a consultation with our experts today and take the first step towards more self-confidence.
+                    </p>
+                </div>
+              </div>
         </div>
     </div> 
 </section>
