--- a/appoinment.html
+++ b/appoinment.html
@@ -55,7 +55,8 @@
                         </div>
                         <br>
                         <!-- <input type="submit"  id="submit" value="SUBMIT FORM"> -->
-                        <button type="button" class="btn btn-primary btn-lg btn-block">SUBMIT</button>
+                        <!-- <button type="button" class="btn btn-primary btn-lg btn-block">SUBMIT FORM</button> -->
+                        <a href="#" class="btn btn-primary" id="appoinmentsubmitbtn">SUBMIT FORM</a>
                     </form>
                 </div>
             </div>
