--- a/contact.html
+++ b/contact.html
@@ -23,44 +23,52 @@
 </head>
 <body>
 
- <!-- Header -->
- <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-fixed-top">
-  <div class="container-fluid d-flex justify-content-between align-items-center">
-    <div class="col-3"> 
-      <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
-    </div>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-          <div class="row"> 
-            <!-- <div class="col-3 ps-5"> 
-                <li class="nav-item ps-5">
-                    <a class="nav-link active" aria-current="page" href="#"><img src="assets/img/logo.png" alt=""></a>
-                </li>
-            </div> -->
-             <div class="col-3 ps-5"> 
-               <li class="nav-item ps-5">
-                  <a class="nav-link active" aria-current="page" href="#"><img src="assets/img/logo.png" alt=""></a>
-               </li>
-             </div>
-            <div class="col-3 ps-5"> 
-                <li class="nav-item mt-3  ps-2 navbarphonenumber">
-                    <a class="nav-link" href="#"><img src="assets/img/phone.svg" alt="">+79979901881</a>
-                </li>
-            </div>
-            <div class="col-3 ps-5  mt-2 navbarappoinment"> 
-                <li class="nav-item ps-5">
-                    <a class="nav-link" href="appoinment.html"><button type="button" class="btn btn-primary">APPOINTMENT</button></a>
-                </li>
-            </div>
-          </div>
-          </ul>
+
+  <!-- Header -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-fixed-top">
+    <div class="container-fluid d-flex justify-content-between align-items-center">
+      <div class="col-3"> 
+        <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
       </div>
-  </div>
-</nav>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse   navbar-collapse justify-content-center ml-auto" id="navbarNav">
+            <ul class="navbar-nav">
+            <div class="row"> 
+              <!-- <div class="col-3 ps-5"> 
+                  <li class="nav-item ps-5">
+                      <a class="nav-link active" aria-current="page" href="#"><img src="assets/img/logo.png" alt=""></a>
+                  </li>
+              </div> -->
+               <div class="col-lg-3 col-sm-12 col-md-12 ps-5 me-5"> 
+                 <li class="nav-item ps-5 me-5">
+                    <a class="nav-link active" aria-current="page" href="index.html"><img src="assets/img/logo.png" alt=""></a>
+                 </li>
+               </div>
+              <div class="col-lg-3 col-sm-12 col-md-12 ms-5"> 
+                  <li class="nav-item mt-3  navbarphonenumber">
+                    <div class="row"> 
+                        <div class="col-3 ps-2"> 
+                          <a class="nav-link" href="index.html"><img src="assets/img/phone.svg" alt=""> </a>
+                        </div>
+                        <div class="col-9 mt-2">
+                          <h5>+79979901881</h5>
+                        </div>
+                    </div>
+                  </li>
+              </div>
+              <div class="col-lg-3 col-sm-12 col-md-12 ms-5  mt-2 navbarappoinment"> 
+                  <li class="nav-item ps-5">
+                      <a class="nav-link" href="appoinment.html"><button type="button" class="btn btn-primary">APPOINTMENT</button></a>
+                  </li>
+              </div>
+            </div>
+            </ul>
+        </div>
+    </div>
+  </nav>
 
 <!-- Ending  Header -->
 
