--- a/about.html
+++ b/about.html
@@ -20,55 +20,56 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
 
+     <!-- Adding bootstrap plugin for Header -->
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
 </head>
 <body>
 
 
-  <!-- Header -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-fixed-top">
-    <div class="container-fluid d-flex justify-content-between align-items-center">
-      <div class="col-3"> 
-        <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
-      </div>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse   navbar-collapse justify-content-center ml-auto" id="navbarNav">
-            <ul class="navbar-nav">
-            <div class="row"> 
-              <!-- <div class="col-3 ps-5"> 
-                  <li class="nav-item ps-5">
-                      <a class="nav-link active" aria-current="page" href="#"><img src="assets/img/logo.png" alt=""></a>
-                  </li>
-              </div> -->
-               <div class="col-lg-3 col-sm-12 col-md-12 ps-5 me-5"> 
-                 <li class="nav-item ps-5 me-5">
-                    <a class="nav-link active" aria-current="page" href="index.html"><img src="assets/img/logo.png" alt=""></a>
-                 </li>
-               </div>
-              <div class="col-lg-3 col-sm-12 col-md-12 ms-5"> 
-                  <li class="nav-item mt-3  navbarphonenumber">
-                    <div class="row"> 
-                        <div class="col-3 ps-2"> 
-                          <a class="nav-link" href="index.html"><img src="assets/img/phone.svg" alt=""> </a>
-                        </div>
-                        <div class="col-9 mt-2">
-                          <h5>+79979901881</h5>
-                        </div>
-                    </div>
-                  </li>
+<!-- Header -->
+<nav class="navbar navbar-expand-lg navbar-light top_nav_bat ">
+  <div class="col-3">
+    <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
+  </div>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+    <ul class="navbar-nav">
+      <div class="row">
+        <div class="col-lg-3 col-sm-12 col-md-12 ps-5 me-5">
+          <li class="nav-item ps-5 me-5">
+            <a class="nav-link active" aria-current="page" href="index.html"><img src="assets/img/logo.png"
+                alt=""></a>
+          </li>
+        </div>
+        <div class="col-lg-3 col-sm-12 col-md-12 ms-5">
+          <li class="nav-item mt-3  navbarphonenumber">
+            <div class="row">
+              <div class="col-3 ps-2">
+                <a class="nav-link" href="index.html"><img src="assets/img/phone.svg" alt=""> </a>
               </div>
-              <div class="col-lg-3 col-sm-12 col-md-12 ms-5  mt-2 navbarappoinment"> 
-                  <li class="nav-item ps-5">
-                      <a class="nav-link" href="appoinment.html"><button type="button" class="btn btn-primary">APPOINTMENT</button></a>
-                  </li>
+              <div class="col-9 mt-2">
+                <h5>+79979901881</h5>
               </div>
             </div>
-            </ul>
+          </li>
         </div>
-    </div>
-  </nav>
+        <div class="col-lg-3 col-sm-12 col-md-12 ms-5  mt-2 navbarappoinment">
+          <li class="nav-item ps-5">
+            <a class="nav-link" href="appoinment.html"><button type="button"
+                class="btn btn-primary">APPOINTMENT</button></a>
+          </li>
+        </div>
+      </div>
+    </ul>
+  </div>
+</nav>
 
 <!-- Ending  Header -->
 
@@ -78,7 +79,7 @@
       <div class="container-fluid aboutus">
           <div class="container"> 
               <div class="row"> 
-                      <div class="col-6 aboutuscontent">
+                      <div class="col-lg-6  col-sm-12 col-md-12  aboutuscontent">
                            <h1>About Us</h1>
                            <h2>Improving lives by Couples Therapy</h2>
                       </div>
@@ -92,19 +93,19 @@
 
 <!--    OUR STORY  -->
 
-<section class="ourstory mb-5">
-    <div class="container"> 
+<section class="mb-5">
               <div class="col-lg-12 col-sm-12 col-md-12"> 
-                <div class=" container ourstory p-5 justify-content-center"> 
-                    <h1  class="text-center">Our Story</h1>
-                    <p>As a leading cosmetic gynecology hospital in kakinada, we offer a range of   state-of-the-art treatments to make you look and feel Your best. Our team of experienced gynecologists and plastic surgeons is committed to providing you with personalized care and exceptional results. </p>
-                    <p>Our commitment to excellence and patient satisfaction has earned us a reputation as the benchmark in intimate Wellness and  aesthetic treatments.</p>
-                    <p>Don't compromise on Your well-being. Trust the best Aesthetic Gynecology 
-                    Hospital in Kakinada - Aruna Hospital Couples Clinic. Arrange a consultation with our experts today and take the first step towards more self-confidence.
-                    </p>
+                <div class=" container ourstory justify-content-center"> 
+                  <div class="container p-5"> 
+                      <h1  class="text-center">Our Story</h1>
+                      <p>As a leading cosmetic gynecology hospital in kakinada, we offer a range of   state-of-the-art treatments to make you look and feel Your best. Our team of experienced gynecologists and plastic surgeons is committed to providing you with personalized care and exceptional results. </p>
+                      <p>Our commitment to excellence and patient satisfaction has earned us a reputation as the benchmark in intimate Wellness and  aesthetic treatments.</p>
+                      <p>Don't compromise on Your well-being. Trust the best Aesthetic Gynecology 
+                      Hospital in Kakinada - Aruna Hospital Couples Clinic. Arrange a consultation with our experts today and take the first step towards more self-confidence.
+                      </p>
+                  </div>
                 </div>
               </div>
-        </div>
     </div> 
 </section>
 
