--- a/appoinment.html
+++ b/appoinment.html
@@ -32,25 +32,25 @@
                      <img src="assets/img/appoinment.png" alt="" height="auto" width="auto">
                 </div>
                 <div class="col-lg-6 col-sm-12 col-md-12">
-                    <h1 class="mt-5">Make An Appoinment</h1>
+                    <h1 class="mt-5 ms-5">Make An Appoinment</h1>
                     <br>
                     <form id="appoinmentfrom">
-                        <input type="text" placeholder="Your Name" required>
+                        <input type="text" placeholder="Your Name" class="p-3" required>
                         <br>
-                        <input type="text" placeholder="Your Email" required>
+                        <input type="text" placeholder="Your Email" class="p-3" required>
                         <br>
-                        <select id="appoinmentfromselect" name="gender" required>
-                            <option value="" disabled selected>Select your option</option>
+                        <select id="appoinmentfromselect" name="gender"  class="ps-2" required>
+                            <option value="" disabled selected>Select Option</option>
                             <option value="male">Male</option>
                             <option value="female">Female</option>
                             <option value="other">Other</option>
                         </select>
                         <br>
-                        <input type="text" placeholder="Appoinment Date" required>
+                        <input type="text" placeholder="Appoinment Date"  class="p-3" required>
                         <br>
                         <div class="writeyourmessage"> 
                         <input type="text"  placeholder="write Your Message"
-                         style="height: 100px;"
+                         style="height: 100px;" class="p-3"
                         required>    
                         </div>
                         <br>
