--- a/femalenonsurgical.html
+++ b/femalenonsurgical.html
@@ -20,67 +20,65 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
 
+    <!-- Adding bootstrap plugin for Header -->
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
 </head>
 <body>
- <!-- Header -->
- <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-fixed-top">
-    <div class="container-fluid d-flex justify-content-between align-items-center">
-      <div class="col-3"> 
-        <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
-      </div>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse   navbar-collapse justify-content-center ml-auto" id="navbarNav">
-            <ul class="navbar-nav">
-            <div class="row"> 
-              <!-- <div class="col-3 ps-5"> 
-                  <li class="nav-item ps-5">
-                      <a class="nav-link active" aria-current="page" href="#"><img src="assets/img/logo.png" alt=""></a>
-                  </li>
-              </div> -->
-               <div class="col-lg-3 col-sm-12 col-md-12 ps-5 me-5"> 
-                 <li class="nav-item ps-5 me-5">
-                    <a class="nav-link active" aria-current="page" href="index.html"><img src="assets/img/logo.png" alt=""></a>
-                 </li>
-               </div>
-              <div class="col-lg-3 col-sm-12 col-md-12 ms-5"> 
-                  <li class="nav-item mt-3  navbarphonenumber">
-                    <div class="row"> 
-                        <div class="col-3 ps-2"> 
-                          <a class="nav-link" href="index.html"><img src="assets/img/phone.svg" alt=""> </a>
-                        </div>
-                        <div class="col-9 mt-2">
-                          <h5>+79979901881</h5>
-                        </div>
-                    </div>
-                  </li>
-              </div>
-              <div class="col-lg-3 col-sm-12 col-md-12 ms-5  mt-2 navbarappoinment"> 
-                  <li class="nav-item ps-5">
-                      <a class="nav-link" href="appoinment.html"><button type="button" class="btn btn-primary">APPOINTMENT</button></a>
-                  </li>
-              </div>
-            </div>
-            </ul>
-        </div>
+<!-- Header -->
+<nav class="navbar navbar-expand-lg navbar-light top_nav_bat ">
+    <div class="col-3">
+      <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
     </div>
-  </nav>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="navbar-nav">
+        <div class="row">
+          <div class="col-lg-3 col-sm-12 col-md-12 ps-5 me-5">
+            <li class="nav-item ps-5 me-5">
+              <a class="nav-link active" aria-current="page" href="index.html"><img src="assets/img/logo.png"
+                  alt=""></a>
+            </li>
+          </div>
+          <div class="col-lg-3 col-sm-12 col-md-12 ms-5">
+            <li class="nav-item mt-3  navbarphonenumber">
+              <div class="row">
+                <div class="col-3 ps-2">
+                  <a class="nav-link" href="index.html"><img src="assets/img/phone.svg" alt=""> </a>
+                </div>
+                <div class="col-9 mt-2">
+                  <h5>+79979901881</h5>
+                </div>
+              </div>
+            </li>
+          </div>
+          <div class="col-lg-3 col-sm-12 col-md-12 ms-5  mt-2 navbarappoinment">
+            <li class="nav-item ps-5">
+              <a class="nav-link" href="appoinment.html"><button type="button"
+                  class="btn btn-primary">APPOINTMENT</button></a>
+            </li>
+          </div>
+        </div>
+      </ul>
+    </div>
+</nav>
 
 <!-- Ending  Header -->
 
 <!--  MAIN SECTION -->
 <section>
-    <div class="container mb-5">
+    <div class="container-fluid mb-5">
         <div class="row"> 
             <h3 class="pb-3">FEMALE NON SURGICAL</h3>
-            <div class="col-lg-6 col-md-12 col-sm-12">
-                
-            </div>
-            <div class="col-lg-6 col-md-12 col-sm-12 p-3">
-          
-            </div>
+            <!-- <div class="col-lg-6 col-md-12 col-sm-12">
+            </div> -->
+            <img src="assets/img/nonsugricalmainimg.png"  class="img-fluid">
         </div>
     </div>
 </section>
