--- a/femalenonsurgical.html
+++ b/femalenonsurgical.html
@@ -29,47 +29,63 @@
 
 </head>
 <body>
-<!-- Header -->
-<nav class="navbar navbar-expand-lg navbar-light top_nav_bat ">
-    <div class="col-3">
-      <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
-    </div>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-      <ul class="navbar-nav">
-        <div class="row">
-          <div class="col-lg-3 col-sm-12 col-md-12 ps-5 me-5">
-            <li class="nav-item ps-5 me-5">
-              <a class="nav-link active" aria-current="page" href="index.html"><img src="assets/img/logo.png"
-                  alt=""></a>
-            </li>
-          </div>
-          <div class="col-lg-3 col-sm-12 col-md-12 ms-5">
-            <li class="nav-item mt-3  navbarphonenumber">
-              <div class="row">
-                <div class="col-3 ps-2">
-                  <a class="nav-link" href="index.html"><img src="assets/img/phone.svg" alt=""> </a>
-                </div>
-                <div class="col-9 mt-2">
-                  <h5>+79979901881</h5>
-                </div>
-              </div>
-            </li>
-          </div>
-          <div class="col-lg-3 col-sm-12 col-md-12 ms-5  mt-2 navbarappoinment">
-            <li class="nav-item ps-5">
-              <a class="nav-link" href="appoinment.html"><button type="button"
-                  class="btn btn-primary">APPOINTMENT</button></a>
-            </li>
-          </div>
+
+
+<!-- Header Large Screen only  -->
+<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex">
+  <a class="navbar-brand" href="#">
+    <img src="assets/img/logo.png" alt="">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav ml-auto justify-content-between">
+      <a class="nav-item nav-link ms-5 ps-5 pe-5" href="#" id="navlink2">
+        <img src="assets/img/logo.png" alt="">
+      </a>
+      <a class="nav-item nav-link ms-5 mt-2 ps-5  " href="#" id="navlink2">
+        <div class="d-flex align-items-center">
+          <img src="assets/img/phone.svg" alt="">
+          <h5 class="ml-2">+79979901881</h5>
         </div>
-      </ul>
+      </a>
+      <a class="nav-item nav-link ms-2 " href="appoinment.html" id="navlink2" >
+        <button type="button" class="btn btn-primary ms-3 ps-3 pe-3">APPOINTMENT</button>
+      </a>
     </div>
+  </div>
+</nav>
+  <!-- Header -->
+
+ 
+<!-- Header Small and medium Screen only  -->
+<nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none">
+  <a class="navbar-brand" href="#">
+    <img src="assets/img/logo.png" alt="">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav ml-auto justify-content-between">
+      <a class="nav-item nav-link" href="#" id="navlink2">
+        <img src="assets/img/logo.png" alt="">
+      </a>
+      <a class="nav-item nav-link" href="#" id="navlink2">
+        <div class="d-flex align-items-center">
+          <img src="assets/img/phone.svg" alt="">
+          <h5 class="ml-2">+79979901881</h5>
+        </div>
+      </a>
+      <a class="nav-item nav-link" href="appoinment.html" id="navlink2">
+        <button type="button" class="btn btn-primary">APPOINTMENT</button>
+      </a>
+    </div>
+  </div>
 </nav>
 
-<!-- Ending  Header -->
+  <!-- Header -->
 
 <!--  MAIN SECTION -->
 <section>
