--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </div>
     </div>
   </nav> -->
-
+<!-- Toogle working close and open 
   <nav class="navbar navbar-expand-lg navbar-light top_nav_bat ">
     <div class="col-3">
       <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
@@ -127,8 +127,68 @@
         </div>
       </ul>
     </div>
+</nav> -->
+
+
+
+
+
+<!-- Header Large Screen only  -->
+<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex">
+  <a class="navbar-brand" href="#">
+    <img src="assets/img/logo.png" alt="">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav ml-auto justify-content-between">
+      <a class="nav-item nav-link ms-5 ps-5 pe-5" href="#" id="navlink2">
+        <img src="assets/img/logo.png" alt="">
+      </a>
+      <a class="nav-item nav-link ms-5 mt-2 ps-5  " href="#" id="navlink2">
+        <div class="d-flex align-items-center">
+          <img src="assets/img/phone.svg" alt="">
+          <h5 class="ml-2">+79979901881</h5>
+        </div>
+      </a>
+      <a class="nav-item nav-link ms-2 " href="appoinment.html" id="navlink2" >
+        <button type="button" class="btn btn-primary ms-3 ps-3 pe-3">APPOINTMENT</button>
+      </a>
+    </div>
+  </div>
+</nav>
+  <!-- Header -->
+
+ 
+<!-- Header Small and medium Screen only  -->
+<nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none">
+  <a class="navbar-brand" href="#">
+    <img src="assets/img/logo.png" alt="">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav ml-auto justify-content-between">
+      <a class="nav-item nav-link" href="#" id="navlink2">
+        <img src="assets/img/logo.png" alt="">
+      </a>
+      <a class="nav-item nav-link" href="#" id="navlink2">
+        <div class="d-flex align-items-center">
+          <img src="assets/img/phone.svg" alt="">
+          <h5 class="ml-2">+79979901881</h5>
+        </div>
+      </a>
+      <a class="nav-item nav-link" href="appoinment.html" id="navlink2">
+        <button type="button" class="btn btn-primary">APPOINTMENT</button>
+      </a>
+    </div>
+  </div>
 </nav>
 
+  <!-- Header -->
+  
   <!-- Ending  Header -->
 
   <div class="fulfilingloveiconbar">
