navbar font  changes

--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
 
 
 <!--   GET IN TOUCH  -->
-
+<!-- 
 <section> 
   <div class="card mb-5"  id="getintouchid"   style="width: 60rem;">
        <div class="container-lg container-sm container-md  getintouch">
@@ -135,6 +135,41 @@
         </div>
        </div>
   </div>
+</section> -->
+
+<!--  ENDING  GET IN TOUCH -->
+
+<!--  GET IN TOUCH  -->
+
+<section class="mb-5">
+  <div class="col-lg-12 col-sm-12 col-md-12"> 
+    <div class=" container getintouch  justify-content-center"> 
+      <div class="container p-5"> 
+        <div class="row">
+          <div class="col-lg-6  col-md-12  col-sm-12 mt-5">
+             <img src="assets/img/about.png" alt="" height="200" width="300">
+          </div>
+          <div class="col-lg-6  col-md-12  col-sm-12">
+            <h1 class="mt-5">Get In touch</h1>
+            <br>
+            <form id="contact">
+                <input type="text" placeholder="Your Name" required>
+                <br>
+                <input type="text" placeholder="Your Email" required>
+                <br>
+                <input type="text" placeholder="Appoinment Date" required>
+                <br>
+                <input type="text" placeholder="write Your Message"
+                style="height: 100px;" required>
+                <br>
+                <button type="button" class="btn btn-primary btn-lg btn-block">SUBMIT</button>
+            </form>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div> 
 </section>
 
 <!--  ENDING  GET IN TOUCH -->
@@ -174,8 +209,8 @@
             <div class="col-lg-3  col-sm-6  footersecondblock">
               <h5 class="pb-3">ADDRESS</h5>
               <h6>D.No 8-19-4/6,</h6>
-              <h6>Gandhi Nagar, Ontimamidi Jn.,</h6>
-              <h6>Chagantivari Street,</h6>
+              <h6>Gandhi Nagar, Ontimamidi Jn., Chagantivari Street,</h6>
+              <!-- <h6>Chagantivari Street,</h6> -->
               <h6>KAKINADA ANDHRA PRADESH-5333004</h6>
             </div>
             <!--  THIRD BLOCK -->
