--- a/male.html
+++ b/male.html
@@ -209,8 +209,8 @@
               <div class="col-lg-3  col-sm-6  footersecondblock">
                 <h5 class="pb-3">ADDRESS</h5>
                 <h6>D.No 8-19-4/6,</h6>
-                <h6>Gandhi Nagar, Ontimamidi Jn.,</h6>
-                <h6>Chagantivari Street,</h6>
+                <h6>Gandhi Nagar, Ontimamidi Jn.,Chagantivari Street,</h6>
+                <!-- <h6>Chagantivari Street,</h6> -->
                 <h6>KAKINADA ANDHRA PRADESH-5333004</h6>
               </div>
               <!--  THIRD BLOCK -->
@@ -225,6 +225,7 @@
       </div>
     </section>
     </footer>
+
     
     <!--  ENDING  FOOTER -->
 
